sos/include/sos/sos.h


typedef struct sos_container_s *sos_t;
typedef enum sos_perm_e {
	SOS_PERM_RD = ODS_PERM_RD,
	SOS_PERM_WR = ODS_PERM_WR,
	SOS_PERM_RW = ODS_PERM_RW,
	SOS_PERM_CREAT = ODS_PERM_CREAT,
	SOS_BE_MMOS = ODS_BE_MMAP,
	SOS_BE_LSOS = ODS_BE_LSOS,
	SOS_PERM_USER = 512
} sos_perm_t;
typedef enum sos_commit_e {
	SOS_COMMIT_ASYNC,
	SOS_COMMIT_SYNC
} sos_commit_t;
typedef struct sos_config_iter_s *sos_config_iter_t;
typedef struct sos_config_data_s {
	char name[SOS_CONFIG_NAME_LEN];
	char value[0];
} *sos_config_t;
struct sos_version_s {
	uint8_t major;		
	uint8_t minor;		
	uint16_t fix;		
	char git_commit_id[44];	
};
struct sos_version_s sos_container_version(sos_t sos);
int sos_container_new(const char *path, int o_mode); 
sos_t sos_container_open(const char *path_arg, sos_perm_t o_perm, ...);
int sos_container_delete(sos_t c);
void sos_container_close(sos_t c, sos_commit_t flags);
int sos_container_commit(sos_t c, sos_commit_t flags);
void sos_container_info(sos_t sos, FILE* fp);
void sos_inuse_obj_info(sos_t sos, FILE *fp);
void sos_free_obj_info(sos_t sos, FILE *fp);
int sos_container_config_set(const char *path, const char *option, const char *value);
char *sos_container_config_get(const char *path, const char *option);
sos_config_iter_t sos_config_iter_new(const char *path);
void sos_config_iter_free(sos_config_iter_t iter);
sos_config_t sos_config_first(sos_config_iter_t iter);
sos_config_t sos_config_next(sos_config_iter_t iter);
void sos_config_print(const char *path, FILE *fp);
int sos_begin_x_wait(sos_t sos, struct timespec *ts);
int sos_begin_x(sos_t sos);
void sos_end_x(sos_t sos);
typedef struct sos_attr_s *sos_attr_t;
typedef struct sos_index_s *sos_index_t;
typedef struct sos_schema_s *sos_schema_t;
typedef struct sos_obj_s *sos_obj_t;
typedef enum sos_type_e {
	SOS_TYPE_INT16 = 0,
	SOS_TYPE_FIRST = SOS_TYPE_INT16,
	SOS_TYPE_INT32,
	SOS_TYPE_INT64,
	SOS_TYPE_UINT16,
	SOS_TYPE_UINT32,
	SOS_TYPE_UINT64,
	SOS_TYPE_FLOAT,
	SOS_TYPE_DOUBLE,
	SOS_TYPE_LONG_DOUBLE,
	SOS_TYPE_TIMESTAMP,
	SOS_TYPE_OBJ,
	SOS_TYPE_STRUCT,
	SOS_TYPE_JOIN,
	SOS_TYPE_BYTE_ARRAY = 32,
	SOS_TYPE_ARRAY = SOS_TYPE_BYTE_ARRAY,
	SOS_TYPE_CHAR_ARRAY,
	SOS_TYPE_STRING = SOS_TYPE_CHAR_ARRAY,
	SOS_TYPE_INT16_ARRAY,
	SOS_TYPE_INT32_ARRAY,
	SOS_TYPE_INT64_ARRAY,
	SOS_TYPE_UINT16_ARRAY,
	SOS_TYPE_UINT32_ARRAY,
	SOS_TYPE_UINT64_ARRAY,
	SOS_TYPE_FLOAT_ARRAY,
	SOS_TYPE_DOUBLE_ARRAY,
	SOS_TYPE_LONG_DOUBLE_ARRAY,
	SOS_TYPE_OBJ_ARRAY,
	SOS_TYPE_LAST = SOS_TYPE_OBJ_ARRAY
} sos_type_t;
typedef union sos_obj_ref_s {
	ods_idx_data_t idx_data;
	struct sos_idx_ref_s {
		uuid_t part_uuid;	
		ods_ref_t obj;		
	} ref;
	struct dsos_ref_s {
		u_long cont_id;
		u_long client_id;
		u_long part_id;
		u_long schema_id;
		ods_ref_t obj_ref;
	} dsos_ref;
} sos_obj_ref_t;
union sos_array_element_u {
	char char_[0];
	uint8_t byte_[0];
	uint16_t uint16_[0];
	uint32_t uint32_[0];
	uint64_t uint64_[0];
	int16_t int16_[0];
	int32_t int32_[0];
	int64_t int64_[0];
	float float_[0];
	double double_[0];
	long double long_double_[0];
	sos_obj_ref_t ref_[0];
};
typedef struct sos_array_info_s {
	uint32_t size;
	uint32_t offset;
} *sos_array_info_t;
typedef struct sos_array_s {
	uint32_t count;
	union sos_array_element_u data;
} *sos_array_t;
union sos_primary_u {
	unsigned char byte_;
	uint16_t uint16_;
	uint32_t uint32_;
	uint64_t uint64_;
	int16_t int16_;
	int32_t int32_;
	int64_t int64_;
	float float_;
	double double_;
	long double long_double_;
	union sos_timestamp_u timestamp_;
	union sos_obj_ref_s ref_;
	uint8_t struc_[0];
};
typedef union sos_value_data_u {
	union sos_primary_u prim;
	union sos_array_element_u struc;
	struct sos_array_info_s array_info;
	struct sos_array_s array;
	struct sos_array_s join;
	char __pad[256];
} *sos_value_data_t;
typedef struct sos_value_s {
	sos_obj_t obj;		
	sos_type_t type;	
	sos_attr_t attr;	
	sos_value_data_t data;	      
	union sos_value_data_u data_; 
} *sos_value_t;
sos_array_t sos_array(sos_value_t v);
#define sos_array_count(_v_) sos_array(_v_)->count
typedef struct sos_schema_template_attr {
	const char *name;
	sos_type_t type;
	size_t size;		
	const char **join_list;	
	int indexed;
	const char *idx_type;
	const char *key_type;
	const char *idx_args;
} *sos_schema_template_attr_t;
typedef struct sos_schema_template {
	const char *name;
	const char *uuid;
	struct sos_schema_template_attr attrs[];
} *sos_schema_template_t;
int sos_schema_export(const char *path, FILE *fp);
sos_schema_t sos_schema_create(const char *name, const uuid_t uuid);
sos_schema_t sos_schema_new(const char *name);
void sos_schema_free(sos_schema_t schema);
sos_schema_t sos_schema_dup(sos_schema_t schema);
size_t sos_schema_count(sos_t sos);
int sos_schema_add(sos_t sos, sos_schema_t schema);
sos_schema_t sos_schema_from_template(sos_schema_template_t pt);
sos_schema_t sos_schema_by_name(sos_t sos, const char *name);
sos_schema_t sos_schema_by_uuid(sos_t sos, uuid_t id);
void sos_schema_print(sos_schema_t schema, FILE *fp);
int sos_schema_delete(sos_t sos, const char *name);
sos_schema_t sos_schema_first(sos_t sos);
sos_schema_t sos_schema_next(sos_schema_t schema);
const char *sos_schema_name(sos_schema_t schema);
uint32_t sos_schema_gen(sos_schema_t schema);
void sos_schema_uuid(sos_schema_t schema, uuid_t uuid);
int sos_schema_attr_count(sos_schema_t schema);
int sos_schema_attr_add(sos_schema_t schema, const char *name, sos_type_t type, ...);
int sos_schema_index_add(sos_schema_t schema, const char *name);
int sos_schema_index_rem(sos_schema_t schema, const char *name);
int sos_schema_index_modify(sos_schema_t schema, const char *name,
			    const char *idx_type, const char *key_type,
			    const char *idx_args);
sos_attr_t sos_schema_attr_by_name(sos_schema_t schema, const char *name);
sos_attr_t sos_schema_attr_by_id(sos_schema_t schema, int attr_id);
sos_attr_t sos_schema_attr_first(sos_schema_t schema);
sos_attr_t sos_schema_attr_last(sos_schema_t schema);
sos_attr_t sos_schema_attr_next(sos_attr_t attr);
sos_attr_t sos_schema_attr_prev(sos_attr_t attr);
int sos_attr_id(sos_attr_t attr);
const char *sos_attr_name(sos_attr_t attr);
sos_type_t sos_attr_type(sos_attr_t attr);
sos_index_t sos_attr_index(sos_attr_t attr);
const char *sos_attr_idx_type(sos_attr_t attr);
const char *sos_attr_key_type(sos_attr_t attr);
const char *sos_attr_idx_args(sos_attr_t attr);
size_t sos_attr_size(sos_attr_t attr);
sos_schema_t sos_attr_schema(sos_attr_t attr);
sos_array_t sos_attr_join_list(sos_attr_t attr);
int sos_obj_attr_by_name_from_str(sos_obj_t sos_obj,
				  const char *attr_name, const char *attr_value,
				  char **endptr);
size_t sos_obj_attr_strlen(sos_obj_t obj, sos_attr_t attr);
#define SOS_PART_NAME_LEN			256
#define SOS_PART_PATH_LEN			1024
typedef enum sos_part_state_e {
	SOS_PART_STATE_OFFLINE = 0,
	SOS_PART_STATE_ACTIVE = 1,
	SOS_PART_STATE_PRIMARY = 2,
	SOS_PART_STATE_BUSY = 3,
	SOS_PART_STATE_DETACHED = 4
} sos_part_state_t;
typedef struct sos_part_stat_s {
	uint64_t size;		
	uint64_t accessed;	
	uint64_t modified;	
	uint64_t changed;	
	uint64_t ref_count;	
	double rd_req_sec;	
	double rd_kb_sec;	
	double wr_req_sec;	
	double wr_kb_sec;	
} *sos_part_stat_t;
typedef struct sos_part_iter_s *sos_part_iter_t;
typedef struct sos_part_s *sos_part_t;
sos_part_t sos_part_open(const char *path, int o_perm, ...);
int sos_part_chown(sos_part_t part, uid_t uid, gid_t gid);
int sos_part_chmod(sos_part_t part, int mode);
int sos_part_attach(sos_t sos, const char *name, const char *path);
int sos_part_detach(sos_t sos, const char *name);
sos_part_t sos_part_by_name(sos_t sos, const char *name);
sos_part_t sos_part_by_path(sos_t sos, const char *path);
sos_part_iter_t sos_part_iter_new(sos_t sos);
void sos_part_iter_free(sos_part_iter_t iter);
sos_part_t sos_part_first(sos_part_iter_t iter);
sos_part_t sos_part_next(sos_part_iter_t iter);
const char *sos_part_name(sos_part_t part);
const char *sos_part_path(sos_part_t part);
const char *sos_part_desc(sos_part_t part);
void sos_part_desc_set(sos_part_t part, const char *name);
sos_part_state_t sos_part_state(sos_part_t part);
int sos_part_state_set(sos_part_t part, sos_part_state_t state);
uint32_t sos_part_refcount(sos_part_t part);
void sos_part_uuid(sos_part_t part, uuid_t uuid);
void sos_part_put(sos_part_t part);
int sos_part_stat(sos_part_t part, sos_part_stat_t stat);
int sos_part_verify(char *path, FILE *fp);
uid_t sos_part_uid(sos_part_t part);
gid_t sos_part_gid(sos_part_t part);
int sos_part_perm(sos_part_t part);
size_t sos_part_remap_schema_uuid(sos_part_t part, const char *dst_path, const char *src_path);
typedef int (*sos_part_obj_iter_fn_t)(sos_part_t part, ods_obj_t ods_obj, sos_obj_t sos_obj, void *arg);
typedef struct sos_part_obj_iter_pos_s {
	struct ods_obj_iter_pos_s pos;
} *sos_part_obj_iter_pos_t;
void sos_part_obj_iter_pos_init(sos_part_obj_iter_pos_t pos);
int sos_part_obj_iter(sos_part_t part, sos_part_obj_iter_pos_t pos,
		      sos_part_obj_iter_fn_t fn, void *arg);
typedef struct sos_part_uuid_entry_s {
	uuid_t uuid;		
	long count;		
} *sos_part_uuid_entry_t;
sos_part_uuid_entry_t sos_part_query_schema_uuid(sos_part_t part, size_t *count);
typedef int (*sos_part_reindex_callback_fn)(sos_part_t part, void *arg, uint64_t obj_count);
size_t sos_part_reindex(sos_part_t part,
			sos_part_reindex_callback_fn callback_fn, void *callback_arg,
			size_t obj_count);
#define SOS_OBJ_BE	1
#define SOS_OBJ_LE	2
sos_obj_t sos_obj_new(sos_schema_t schema);
sos_obj_t sos_obj_malloc(sos_schema_t schema);
sos_obj_t sos_obj_malloc_size(sos_schema_t schema, size_t reserve);
int sos_obj_commit(sos_obj_t obj);
sos_schema_t sos_obj_schema(sos_obj_t obj);
sos_obj_ref_t sos_obj_ref(sos_obj_t obj);
sos_obj_t sos_ref_as_obj(sos_t sos, sos_obj_ref_t ref);
sos_obj_t sos_obj_from_value(sos_t sos, sos_value_t ref_val);
void sos_obj_delete(sos_obj_t obj);
sos_obj_t sos_obj_get(sos_obj_t obj);
void sos_obj_put(sos_obj_t obj);
int sos_obj_index(sos_obj_t obj);
int sos_obj_remove(sos_obj_t obj);
sos_value_t sos_value_by_name(sos_value_t value, sos_schema_t schema, sos_obj_t obj,
			      const char *name, int *attr_id);
sos_value_t sos_value_by_id(sos_value_t value, sos_obj_t obj, int attr_id);
sos_obj_t sos_array_obj_new(sos_t sos, sos_type_t type, size_t count);
int sos_attr_is_ref(sos_attr_t attr);
int sos_attr_is_array(sos_attr_t attr);
sos_value_t sos_array_new(sos_value_t val, sos_attr_t attr, sos_obj_t obj, size_t count);
sos_value_t sos_value_new();
void sos_value_free(sos_value_t v);
void *sos_obj_ptr(sos_obj_t obj);
sos_value_t sos_value_init(sos_value_t value, sos_obj_t obj, sos_attr_t attr);
sos_value_t sos_value(sos_obj_t obj, sos_attr_t attr);
void sos_value_put(sos_value_t value);
sos_value_data_t sos_obj_attr_data(sos_obj_t obj, sos_attr_t attr, sos_obj_t *arr_obj);
sos_value_data_t sos_value_data_new(sos_type_t typ, size_t count);
void sos_value_data_del(sos_value_data_t vd);
int sos_value_cmp(sos_value_t a, sos_value_t b);
sos_type_t sos_value_type(sos_value_t value);
const char *sos_value_type_name(sos_type_t t);
size_t sos_value_size(sos_value_t value);
size_t sos_value_memcpy(sos_value_t value, void *buf, size_t buflen);
char *sos_obj_attr_to_str(sos_obj_t obj, sos_attr_t attr, char *str, size_t len);
int sos_obj_attr_from_str(sos_obj_t obj, sos_attr_t attr, const char *str, char **endptr);
size_t sos_value_strlen(sos_value_t v);
const char *sos_value_to_str(sos_value_t value, char *str, size_t len);
int sos_value_from_str(sos_value_t value, const char *str, char **endptr);
int sos_obj_attr_by_name_from_str(sos_obj_t sos_obj,
				const char *attr_name, const char *attr_value,
				char **endptr);
char *sos_obj_attr_by_name_to_str(sos_obj_t sos_obj, const char *attr_name,
				char *str, size_t len);
char *sos_obj_attr_by_id_to_str(sos_obj_t sos_obj, int,
				char *str, size_t len);
typedef struct sos_index_stat_s {
	uint64_t cardinality;
	uint64_t duplicates;
	uint64_t size;
} *sos_index_stat_t;
typedef struct ods_obj_s *sos_key_t;
typedef int (*sos_ins_cb_fn_t)(sos_index_t index, sos_key_t key,
			       int missing, sos_obj_ref_t *ref, void *arg);
typedef enum sos_visit_action {
	SOS_VISIT_ADD = ODS_VISIT_ADD,	
	SOS_VISIT_DEL = ODS_VISIT_DEL,	
	SOS_VISIT_UPD = ODS_VISIT_UPD,	
	SOS_VISIT_NOP = ODS_VISIT_NOP	
} sos_visit_action_t;
typedef struct sos_comp_key_spec {
	sos_type_t type;
	sos_value_data_t data;
} *sos_comp_key_spec_t;