sos/src/sos_priv.h


struct sos_part_s {
	struct sos_ref_s ref_count;
	sos_t sos;
	char *path;		
	ods_obj_t ref_obj;	
	ods_obj_t udata_obj;	
	ods_t obj_ods;		
	TAILQ_ENTRY(sos_part_s) entry;
	struct ods_rbn rbn;	
};
struct sos_part_iter_s {
	sos_t sos;
	sos_part_t part;
};