sos/python/Sos.pxd


    sos_version_s sos_container_version(sos_t c)
    int sos_container_new(const char *path, int o_mode)
    sos_t sos_container_open(const char *path, sos_perm_t o_perm, int o_mode)
    int sos_container_delete(sos_t c)
    int sos_container_stat(sos_t sos, stat *sb)
    void sos_container_close(sos_t c, sos_commit_t flags)
    int sos_container_commit(sos_t c, sos_commit_t flags)
    void sos_begin_x_wait(sos_t c, timespec *ts)
    void sos_begin_x(sos_t c)
    void sos_end_x(sos_t c)
    void sos_container_info(sos_t sos, FILE* fp)
    void sos_inuse_obj_info(sos_t sos, FILE *fp)
    void sos_free_obj_info(sos_t sos, FILE *fp)
    int sos_container_config_set(const char *path, const char *option, const char *value)
    char *sos_container_config_get(const char *path, const char *option)
    sos_config_iter_t sos_config_iter_new(const char *path)
    void sos_config_iter_free(sos_config_iter_t iter)
    sos_config_t sos_config_first(sos_config_iter_t iter)
    sos_config_t sos_config_next(sos_config_iter_t iter)
    void sos_config_print(const char *path, FILE *fp)

    int sos_schema_export(const char *path, FILE *)
    sos_schema_t sos_schema_create(const char *name, uuid_t uuid)
    sos_schema_t sos_schema_new(const char *name)
    void sos_schema_free(sos_schema_t schema)
    sos_schema_t sos_schema_dup(sos_schema_t schema)
    size_t sos_schema_count(sos_t sos)
    int sos_schema_add(sos_t sos, sos_schema_t schema)
    sos_schema_t sos_schema_from_template(sos_schema_template_t pt)
    sos_schema_t sos_schema_by_name(sos_t sos, const char *name)
    sos_schema_t sos_schema_by_uuid(sos_t sos, uuid_t uuid)
    void sos_schema_print(sos_schema_t schema, FILE *fp)
    int sos_schema_delete(sos_t sos, const char *name)
    sos_schema_t sos_schema_first(sos_t sos)
    sos_schema_t sos_schema_next(sos_schema_t schema)
    const char *sos_schema_name(sos_schema_t schema)
    void sos_schema_uuid(sos_schema_t schema, uuid_t uuid)
    uint32_t sos_schema_gen(sos_schema_t schema)
    int sos_schema_attr_count(sos_schema_t schema)
    int sos_schema_attr_add(sos_schema_t schema, const char *name, sos_type_t type, ...)
    int sos_schema_index_add(sos_schema_t schema, const char *name)
    int sos_schema_index_rem(sos_schema_t schema, const char *attr_name)
    int sos_schema_index_modify(sos_schema_t schema, const char *name,
                                const char *idx_type, const char *key_type, ...)
    sos_attr_t sos_schema_attr_by_name(sos_schema_t schema, const char *name)
    sos_attr_t sos_schema_attr_by_id(sos_schema_t schema, int attr_id)
    sos_attr_t sos_schema_attr_first(sos_schema_t schema)
    sos_attr_t sos_schema_attr_last(sos_schema_t schema)
    sos_attr_t sos_schema_attr_next(sos_attr_t attr)
    sos_attr_t sos_schema_attr_prev(sos_attr_t attr)

    int sos_attr_id(sos_attr_t attr)
    const char *sos_attr_name(sos_attr_t attr)
    sos_type_t sos_attr_type(sos_attr_t attr)
    sos_index_t sos_attr_index(sos_attr_t attr)
    const char *sos_attr_idx_type(sos_attr_t attr)
    const char *sos_attr_key_type(sos_attr_t attr)
    const char *sos_attr_idx_args(sos_attr_t attr)
    size_t sos_attr_size(sos_attr_t attr)
    sos_schema_t sos_attr_schema(sos_attr_t attr)
    int sos_attr_join(sos_obj_t obj, sos_attr_t attr)
    sos_array_t sos_attr_join_list(sos_attr_t attr)

    int sos_obj_attr_by_name_from_str(sos_obj_t sos_obj,
                                      const char *attr_name, const char *attr_value,
                                      char **endptr)

    cdef enum:
        SOS_PART_NAME_DEFAULT,
        SOS_PART_NAME_LEN,
        SOS_PART_PATH_LEN,

    cdef enum sos_part_state_e:
        SOS_PART_STATE_OFFLINE,
        SOS_PART_STATE_ACTIVE,
        SOS_PART_STATE_PRIMARY,
        SOS_PART_STATE_BUSY,
        SOS_PART_STATE_DETACHED

    ctypedef sos_part_state_e sos_part_state_t

    cdef struct sos_part_stat_s:
        uint64_t size
        uint64_t accessed
        uint64_t modified
        uint64_t changed
    ctypedef sos_part_stat_s *sos_part_stat_t

    cdef struct sos_part_iter_s:
        pass
    ctypedef sos_part_iter_s *sos_part_iter_t
    cdef struct sos_part_s:
        pass
    ctypedef sos_part_s *sos_part_t

    cdef struct sos_part_uuid_entry_s:
        uuid_t uuid
        long count
    ctypedef sos_part_uuid_entry_s *sos_part_uuid_entry_t

    sos_part_t sos_part_open(const char *path, int o_perm, int o_mode, const char *desc)
    int sos_part_chown(sos_part_t part, uid_t uid, gid_t gid)
    int sos_part_chmod(sos_part_t part, int perm)
    int sos_part_attach(sos_t sos, const char *name, const char *path)
    int sos_part_detach(sos_t sos, const char *name)
    sos_part_t sos_part_by_name(sos_t sos, const char *name)
    sos_part_t sos_part_by_path(sos_t sos, const char *path)
    uid_t sos_part_uid(sos_part_t part)
    gid_t sos_part_gid(sos_part_t part)
    int sos_part_perm(sos_part_t part)

    sos_part_iter_t sos_part_iter_new(sos_t sos)
    void sos_part_iter_free(sos_part_iter_t iter)
    sos_part_t sos_part_first(sos_part_iter_t iter)
    sos_part_t sos_part_next(sos_part_iter_t iter)
    const char *sos_part_name(sos_part_t part)
    const char *sos_part_path(sos_part_t part)
    const char *sos_part_desc(sos_part_t part)
    void sos_part_desc_set(sos_part_t part, const char *name)
    void sos_part_uuid(sos_part_t part, uuid_t uuid)
    sos_part_state_t sos_part_state(sos_part_t part)
    int sos_part_state_set(sos_part_t part, sos_part_state_t state)
    uint32_t sos_part_refcount(sos_part_t part)
    void sos_part_put(sos_part_t part)
    int sos_part_stat(sos_part_t part, sos_part_stat_t stat)
    int sos_part_verify(char *path, FILE *fp)
    ctypedef int (*sos_part_obj_iter_fn_t)(sos_part_t part, sos_obj_t obj, void *arg)
    cdef struct sos_part_obj_iter_pos_s:
        pass
    ctypedef sos_part_obj_iter_pos_s *sos_part_obj_iter_pos_t

    void sos_part_obj_iter_pos_init(sos_part_obj_iter_pos_t pos)
    int sos_part_obj_iter(sos_part_t part, sos_part_obj_iter_pos_t pos,
                          sos_part_obj_iter_fn_t fn, void *arg)
    size_t sos_part_remap_schema_uuid(sos_part_t part, const char *dst_path, const char *src_path)
    sos_part_uuid_entry_t sos_part_query_schema_uuid(sos_part_t part, size_t *count)
    ctypedef int (*sos_part_reindex_callback_fn)(sos_part_t part, void *arg, uint64_t obj_count)
    size_t sos_part_reindex(sos_part_t part,
                            sos_part_reindex_callback_fn callback_fn, void *callback_arg,
                            size_t obj_count)

    cdef enum sos_byte_order_e:
        SOS_OBJ_BE,
        SOS_OBJ_LE

    sos_obj_t sos_obj_new(sos_schema_t schema)
    sos_obj_t sos_obj_new_with_data(sos_schema_t schema, uint8_t *data, size_t data_size)
    sos_obj_t sos_obj_malloc(sos_schema_t schema)
    sos_obj_t sos_obj_malloc_size(sos_schema_t schema, size_t reserve)
    int sos_obj_commit(sos_obj_t obj)
    sos_schema_t sos_obj_schema(sos_obj_t obj)

    sos_obj_ref_t sos_obj_ref(sos_obj_t obj)
    sos_obj_t sos_ref_as_obj(sos_t sos, sos_obj_ref_t ref)

    sos_obj_t sos_obj_from_value(sos_t sos, sos_value_t ref_val)
    void sos_obj_delete(sos_obj_t obj)
    sos_obj_t sos_obj_get(sos_obj_t obj)
    void sos_obj_put(sos_obj_t obj)
    int sos_obj_index(sos_obj_t obj)
    int sos_obj_remove(sos_obj_t obj)
    sos_value_t sos_value_by_name(sos_value_t value, sos_schema_t schema, sos_obj_t obj,
                                  const char *name, int *attr_id)
    sos_value_t sos_value_by_id(sos_value_t value, sos_obj_t obj, int attr_id)
    sos_obj_t sos_array_obj_new(sos_t sos, sos_type_t type, size_t count)
    int sos_attr_is_ref(sos_attr_t attr)
    int sos_attr_is_array(sos_attr_t attr)
    size_t sos_array_count(sos_value_t val)
    sos_value_t sos_array_new(sos_value_t val, sos_attr_t attr, sos_obj_t obj, size_t count)
    sos_array_t sos_array(sos_value_t val)
    sos_value_t sos_value_new()
    void sos_value_free(sos_value_t v)
    void *sos_obj_ptr(sos_obj_t obj)
    sos_value_t sos_value_init(sos_value_t value, sos_obj_t obj, sos_attr_t attr)
    sos_value_t sos_value(sos_obj_t obj, sos_attr_t attr)
    sos_value_data_t sos_obj_attr_data(sos_obj_t obj, sos_attr_t attr, sos_obj_t *arr_obj)
    void sos_value_put(sos_value_t value)
    int sos_value_cmp(sos_value_t a, sos_value_t b)
    sos_type_t sos_value_type(sos_value_t value)
    const char *sos_value_type_name(sos_type_t t)
    size_t sos_value_size(sos_value_t value)
    sos_value_data_t sos_value_data_new(sos_type_t typ, size_t count)
    void sos_value_data_del(sos_value_data_t vd)
    size_t sos_value_memcpy(sos_value_t value, void *buf, size_t buflen)
    size_t sos_obj_attr_strlen(sos_obj_t obj, sos_attr_t attr)
    char *sos_obj_attr_to_str(sos_obj_t obj, sos_attr_t attr, char *str, size_t len)
    int sos_obj_attr_from_str(sos_obj_t obj, sos_attr_t attr, const char *str, char **endptr)
    size_t sos_value_strlen(sos_value_t v)
    const char *sos_value_to_str(sos_value_t value, char *str, size_t len)
    int sos_value_from_str(sos_value_t value, const char *str, char **endptr)
    int sos_obj_attr_by_name_from_str(sos_obj_t sos_obj,
                                      const char *attr_name, const char *attr_value,
                                      char **endptr)
    char *sos_obj_attr_by_name_to_str(sos_obj_t sos_obj, const char *attr_name,
                                      char *str, size_t len)
    char *sos_obj_attr_by_name_to_str(sos_obj_t sos_obj, const char *attr_name,
				char *str, size_t len)
    char *sos_obj_attr_by_id_to_str(sos_obj_t sos_obj, int,
                                    char *str, size_t len);


    ctypedef ods_obj_s *sos_key_t

    cdef struct sos_comp_key_spec:
        int type
        sos_value_data_t data

    ctypedef sos_comp_key_spec *sos_comp_key_spec_t

    cdef struct sos_index_stat_s:
        uint64_t cardinality
        uint64_t duplicates
        uint64_t size
    ctypedef sos_index_stat_s *sos_index_stat_t

    ctypedef int (*sos_ins_cb_fn_t)(sos_index_t index, sos_key_t key,
                                    int missing, sos_obj_ref_t *ref, void *arg)

    cdef enum sos_visit_action:
        SOS_VISIT_ADD,
        SOS_VISIT_DEL,
        SOS_VISIT_UPD,
        SOS_VISIT_NOP
    ctypedef sos_visit_action sos_visit_action_t
